wisecow-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow-app
        image: <your-docker-registry>/wisecow-app:latest
        ports:
        - containerPort: 3000
